--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,13 @@
-body{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
-}
 h1{
     text-align: center;
-    background-color: #787FEC
+    border: solid 3px;
+    background-color:rgb(253, 144, 255) ;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-.subtitulo {
-    border: 2px dotted black;
+#tipo{
+    background-image: url("../img/degradado.svg") ;
     text-align: center;
-    background-color: rgb(110, 161, 223)
-}
-.list{
-    background-color: rgb(160, 226, 243)
-}
-.songs{
-    border: 1px solid #03ADCF
+    border: double 10px;
+    padding: 150px ;
+    margin: 30px;
 }
